objects/EUR_CRM_SalesRep_Order__c.object
<CustomObject>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By (Profile)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Channel__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == &apos;EUR_DE_Free_Goods_Order_to_SR_Stock&apos;,CONTAINS(CreatedBy.Profile.Name, &apos;EUR DE ON&apos; )),&apos;ON&apos;, &apos;OFF&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Rep_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Nr_JDE__c</fullName>
        <label>Order Nr. JDE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Rep Order (EU)</label>
    <listViews>
        <fullName>All_DK_Free_Goods_Order_to_SR_Stock</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Order_Date__c</columns>
        <columns>EUR_CRM_Order_Status__c</columns>
        <columns>EUR_CRM_Delivery_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SalesRep_Order__c.EUR_DK_Free_Goods_Order_to_SR_Stock</value>
        </filters>
        <label>All DK Free Goods Order to SR Stock</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_Off_Trade_RSM_Queue_EUR_CRM_SalesRep_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>EUR DE Off Trade RSM Queue</label>
        <queue>EUR_DE_Off_Trade_RSM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_On_Trade_RSM_Queue_EUR_CRM_SalesRep_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>EUR DE On Trade RSM Queue</label>
        <queue>EUR_DE_On_Trade_RSM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sales Rep Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Rep Orders (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Free_Goods_Order_to_SR_Stock</fullName>
        <active>true</active>
        <label>EUR DE Free Goods Order to SR Stock</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Free_Goods_Order_to_SR_Stock</fullName>
        <active>true</active>
        <description>Record Type for DK Free Goods Order to SR Stock</description>
        <label>EUR DK Free Goods Order to SR Stock</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EUR_DE_OrderStatus_SetToFinished</fullName>
        <active>true</active>
        <description>Sales Rep Order Status cannot be set to finished by ON and OFF Trade Users</description>
        <errorConditionFormula>ISPICKVAL(EUR_CRM_Order_Status__c, &quot;Finished&quot;)
 &amp;&amp; 
($Profile.Name  = &quot;EUR DE ON Trade User&quot;
 || 
$Profile.Name  = &quot;EUR DE OFF Trade User&quot;)</errorConditionFormula>
        <errorMessage>Order Status has to be set to Finished by Customer Service</errorMessage>
    </validationRules>
</CustomObject>